# aaltocoursesearch

./: .env  README.md  aaltocoursesearch.py  courses.py  get_data.sh  pyproject.toml
.streamlit/: secrets.toml
