[tool.poetry]
name = "aaltocoursesearch"
version = "0.1.0"
description = ""
authors = ["Jaakko Sirén <jaakko.s@iki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.13.0"
streamlit-aggrid = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
